Reorganize ClimaCoder Writing page with country overview grid
Writing Page Updates:
- Added country overview grid with brief descriptions for all 8 countries
- Created clickable cards linking to detailed country analyses below
- Improved intro text explaining the purpose and scope
- Added responsive grid layout for country cards
- Maintained all detailed country content in anchor-linked sections
- Professional card hover effects

Countries included:
- Belize, Guatemala, Honduras, El Salvador, Nicaragua, Costa Rica, Panama, Mexico

Each card highlights key vulnerabilities and recent events

--- a/climacoder/writing.html
+++ b/climacoder/writing.html
@@ -182,6 +182,47 @@
             margin: 4rem auto;
             padding: 2rem;
         }
+
+        .country-grid {
+            display: grid;
+            grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
+            gap: 1.5rem;
+            margin: 2rem 0 3rem;
+        }
+
+        .country-card {
+            background: white;
+            padding: 1.5rem;
+            border-radius: 8px;
+            box-shadow: 0 2px 8px rgba(0,0,0,0.08);
+            transition: transform 0.3s, box-shadow 0.3s;
+        }
+
+        .country-card:hover {
+            transform: translateY(-4px);
+            box-shadow: 0 4px 16px rgba(0,0,0,0.12);
+        }
+
+        .country-card h3 {
+            margin-bottom: 0.8rem;
+        }
+
+        .country-card h3 a {
+            color: #0066cc;
+            text-decoration: none;
+            font-size: 1.3rem;
+        }
+
+        .country-card h3 a:hover {
+            color: #0052a3;
+            text-decoration: underline;
+        }
+
+        .country-card p {
+            font-size: 0.95rem;
+            line-height: 1.6;
+            color: #555;
+        }
         
         h2 {
             font-size: 2.2rem;
@@ -381,21 +422,90 @@
     </header>
 
     <main>
-        <h2>Heat Stress and Vulnerability</h2>
-        
+        <h2>Writing: Heat Stress Across Latin America</h2>
+
         <div class="intro">
             <p>
-                Extreme heat is a "silent threat" because its impacts often go unnoticed until
-                communities experience spikes in dehydration, heat stroke, kidney disease
-                and other illnesses. Central America and Mexico are
-                particularly susceptible because many people live in poorly planned urban
-                areas without access to clean water and sanitation and because high poverty
-                levels limit adaptation options.
-                Vulnerable groups include children, pregnant women, older adults, people with
-                disabilities and outdoor workers. The following
-                sections summarise how heat stress affects each country in the region.
+                Extreme heat is a silent threat whose impacts often go unnoticed until communities
+                experience spikes in dehydration, heat stroke, kidney disease, and other illnesses.
+                Central America and Mexico are particularly susceptible because many people live in
+                poorly planned urban areas without access to clean water and sanitation, and high
+                poverty levels limit adaptation options.
+            </p>
+            <p>
+                Below are country-specific analyses examining heat vulnerability, health impacts,
+                and the populations most at risk. Each summary synthesizes available data on heat
+                hazards and identifies critical knowledge gaps.
             </p>
         </div>
+
+        <div class="country-grid">
+            <div class="country-card">
+                <h3><a href="#belize">Belize</a></h3>
+                <p>
+                    High extreme heat hazard with significant impacts on health, agriculture, and
+                    outdoor workers. Recent forest fires and Red Cross interventions highlight acute risks.
+                </p>
+            </div>
+
+            <div class="country-card">
+                <h3><a href="#guatemala">Guatemala</a></h3>
+                <p>
+                    Highest heat risk in Central America. Experienced 622% increase in dengue cases
+                    between 2023-2024 linked to heat waves and drought.
+                </p>
+            </div>
+
+            <div class="country-card">
+                <h3><a href="#honduras">Honduras</a></h3>
+                <p>
+                    High extreme heat hazard with 580% increase in dengue cases in 2024. Widespread
+                    outdoor work and limited health services amplify vulnerability.
+                </p>
+            </div>
+
+            <div class="country-card">
+                <h3><a href="#el-salvador">El Salvador</a></h3>
+                <p>
+                    Among highest heat risk countries in the region. High urbanization and inadequate
+                    infrastructure increase heat-related illness susceptibility.
+                </p>
+            </div>
+
+            <div class="country-card">
+                <h3><a href="#nicaragua">Nicaragua</a></h3>
+                <p>
+                    Limited hazard data available, but shares regional vulnerabilities: poor housing,
+                    lack of potable water, and high poverty increase heat exposure.
+                </p>
+            </div>
+
+            <div class="country-card">
+                <h3><a href="#costa-rica">Costa Rica</a></h3>
+                <p>
+                    Lower vulnerability than neighboring countries due to stronger institutions, but
+                    rising temperatures still pose risks to outdoor workers and urban residents.
+                </p>
+            </div>
+
+            <div class="country-card">
+                <h3><a href="#panama">Panama</a></h3>
+                <p>
+                    Increasingly hot summers affecting construction, tourism, and logistics workers.
+                    Critical need for cooling and hydration access in urban coastal centers.
+                </p>
+            </div>
+
+            <div class="country-card">
+                <h3><a href="#mexico">Mexico</a></h3>
+                <p>
+                    Multiyear drought since 2022 affecting 76% of country by 2024. Heat waves intensified
+                    by water scarcity, particularly impacting central and southern regions.
+                </p>
+            </div>
+        </div>
+
+        <h2 style="margin-top: 4rem; margin-bottom: 2rem;">Country Analyses</h2>
 
         <section id="belize">
             <h3>Belize</h3>
