Complete navigation and footer updates for remaining pages
Updated final pages:
- bio/cv.html
- bio/teaching-materials.html
- climacoder/demo.html
- climacoder/maps/maps.html

All pages now have:
- Tender Resilience tab
- Writing nested submenu
- Fixed Research arrow
- New footer with emails + LinkedIn

--- a/bio/teaching-materials.html
+++ b/bio/teaching-materials.html
@@ -231,6 +231,52 @@
                 text-align: center;
             }
         }
+    
+        .footer-links {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            gap: 1rem;
+            margin-bottom: 1rem;
+            flex-wrap: wrap;
+        }
+
+        .footer-links a {
+            color: #0066cc;
+            text-decoration: none;
+            transition: color 0.3s;
+        }
+
+        .footer-links a:hover {
+            color: #0052a3;
+            text-decoration: underline;
+        }
+
+        .footer-links .linkedin-icon {
+            display: inline-flex;
+            align-items: center;
+            transition: opacity 0.3s;
+        }
+
+        .footer-links .linkedin-icon:hover {
+            opacity: 0.8;
+            text-decoration: none;
+        }
+
+        .footer-links .linkedin-icon img {
+            width: 24px;
+            height: 24px;
+        }
+
+        .footer-separator {
+            color: #999;
+            margin: 0 0.5rem;
+        }
+
+        .copyright {
+            color: #999;
+            font-size: 0.9rem;
+        }
     </style>
 </head>
 <body>
