--- a/bio/cv.html
+++ b/bio/cv.html
@@ -20,7 +20,53 @@
     .tag { font-size:.9rem; opacity:.8; }
     .backlink { margin: 1rem auto; max-width:900px; text-align:right; }
     .backlink a { text-decoration:none; }
-  </style>
+  
+        .footer-links {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            gap: 1rem;
+            margin-bottom: 1rem;
+            flex-wrap: wrap;
+        }
+
+        .footer-links a {
+            color: #0066cc;
+            text-decoration: none;
+            transition: color 0.3s;
+        }
+
+        .footer-links a:hover {
+            color: #0052a3;
+            text-decoration: underline;
+        }
+
+        .footer-links .linkedin-icon {
+            display: inline-flex;
+            align-items: center;
+            transition: opacity 0.3s;
+        }
+
+        .footer-links .linkedin-icon:hover {
+            opacity: 0.8;
+            text-decoration: none;
+        }
+
+        .footer-links .linkedin-icon img {
+            width: 24px;
+            height: 24px;
+        }
+
+        .footer-separator {
+            color: #999;
+            margin: 0 0.5rem;
+        }
+
+        .copyright {
+            color: #999;
+            font-size: 0.9rem;
+        }
+    </style>
 </head>
 <body>
   <header class="site-header">
@@ -32,7 +78,9 @@
         <a href="climacoder.html">ClimaCoder</a>
         <a href="writing.html">Writing</a>
         <a href="cv.html" class="active">CV</a>
-      </nav>
+      
+            <a href="/tender-resilience.html">Tender Resilience</a>
+        </nav>
     </div>
   </header>
 
