--- a/bio/teaching.html
+++ b/bio/teaching.html
@@ -202,7 +202,14 @@
         
         .teaching-list {
             display: grid;
+            grid-template-columns: repeat(auto-fit, minmax(400px, 1fr));
             gap: 2rem;
+        }
+
+        @media (max-width: 900px) {
+            .teaching-list {
+                grid-template-columns: 1fr;
+            }
         }
         
         .course {
