--- a/bio/teaching-materials.html
+++ b/bio/teaching-materials.html
@@ -15,7 +15,7 @@
             font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, sans-serif;
             line-height: 1.6;
             color: #333;
-            background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
+            background: #f0f4f8;
             min-height: 100vh;
             display: flex;
             justify-content: center;
@@ -56,24 +56,25 @@
 
         .password-input:focus {
             outline: none;
-            border-color: #667eea;
+            border-color: #0066cc;
         }
 
         .submit-btn {
             width: 100%;
             padding: 15px;
-            background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
+            background: #0066cc;
             color: white;
             border: none;
             border-radius: 8px;
             font-size: 16px;
             font-weight: 600;
             cursor: pointer;
-            transition: transform 0.2s;
+            transition: transform 0.2s, background 0.3s;
         }
 
         .submit-btn:hover {
             transform: translateY(-2px);
+            background: #0052a3;
         }
 
         .error-message {
@@ -131,7 +132,7 @@
         .back-link {
             display: inline-block;
             margin-bottom: 20px;
-            color: #667eea;
+            color: #0066cc;
             text-decoration: none;
             font-weight: 600;
             font-size: 0.95rem;
@@ -139,6 +140,7 @@
 
         .back-link:hover {
             text-decoration: underline;
+            color: #0052a3;
         }
 
         .course-section {
@@ -146,10 +148,10 @@
         }
 
         .course-section h2 {
-            color: #667eea;
+            color: #0066cc;
             margin-bottom: 15px;
             padding-bottom: 10px;
-            border-bottom: 2px solid #667eea;
+            border-bottom: 2px solid #0066cc;
             font-size: 1.4rem;
         }
 
@@ -195,7 +197,7 @@
 
         .material-link {
             padding: 8px 16px;
-            background: #667eea;
+            background: #0066cc;
             color: white;
             text-decoration: none;
             border-radius: 5px;
@@ -204,7 +206,7 @@
         }
 
         .material-link:hover {
-            background: #764ba2;
+            background: #0052a3;
         }
 
         .material-link.preview {
@@ -282,7 +284,7 @@
 <body>
     <!-- Password Screen -->
     <div class="password-screen" id="passwordScreen">
-        <h2>🔒 Private Course Materials</h2>
+        <h2>Private Course Materials</h2>
         <p>Enter password to access teaching materials</p>
         <input 
             type="password" 
@@ -300,7 +302,7 @@
         <a href="bio/teaching.html" class="back-link">← Back to Teaching Page</a>
         
         <div class="header">
-            <h1>📚 Private Teaching Materials</h1>
+            <h1>Private Teaching Materials</h1>
             <button class="logout-btn" onclick="logout()">Logout</button>
         </div>
 
