--- a/bio.html
+++ b/bio.html
@@ -16,6 +16,15 @@
             line-height: 1.6;
             color: #333;
             background: #fafafa;
+            position: relative;
+        }
+        body::before {
+            content: "";
+            position: fixed;
+            inset: 0;
+            z-index: -1;
+            background: url('/assets/images/backgrounds/blueleaves.jpg') center/cover no-repeat;
+            opacity: 0.07;
         }
         
         header {
