--- a/bio/projects.html
+++ b/bio/projects.html
@@ -455,7 +455,7 @@
                 </li>
                 <li style="padding-left: 1.5rem; position: relative; margin-bottom: 0.5rem; color: #555;">
                     <span style="position: absolute; left: 0; color: #0066cc; font-weight: bold;">▸</span>
-                    Developed and tested modified extended heat index (EHI-350*) models incorporating metabolic and solar heat fluxes, 
+                    Developed and tested modified extended heat index (EHI-N*) models incorporating metabolic and solar heat fluxes, 
                     implementing solver logic with Numba and NumbaMinpack
                 </li>
                 <li style="padding-left: 1.5rem; position: relative; margin-bottom: 0.5rem; color: #555;">
